--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# PostgreSQL. Versions 8.2 and up are supported.
+# PostgreSQL. Versions 9.1 and up are supported.
 #
 # Install the pg driver:
 #   gem install pg
@@ -17,9 +17,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see rails configuration guide
+  # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
@@ -80,6 +80,7 @@ test:
 #
 production:
   <<: *default
-  database: pureza_rails_production
-  username: pureza_rails
-  password: <%= ENV['PUREZA_RAILS_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DB_NAME'] || 'pureza_rails_production' %>
+  username: <%= ENV['DB_USER'] || 'pureza_rails' %>
+  password: <%= ENV['DB_PASS'] || ENV['PUREZA_RAILS_DATABASE_PASSWORD'] %>
+  #url: <%= ENV['DATABASE_URL'] %>
